--- a/Pages/Home.razor
+++ b/Pages/Home.razor
@@ -2,6 +2,13 @@
 
 <PageTitle>Home</PageTitle>
 
-<h1>Hello, world!</h1>
+<h1 class="text-4xl font-bold">Hello, world!</h1>
 
-Welcome to your new app.
+<div class="text-xl">Welcome to your new app.</div>
+<div class="mt-5">This is a starter template for Blazor WebAssembly that uses
+    <a href="https://tailwindcss.com/" class="font-medium text-blue-600 dark:text-blue-500 hover:underline">Tailwind
+        CSS</a> and <a href="https://flowbite.com/"
+        class="font-medium text-blue-600 dark:text-blue-500 hover:underline">Flowbite</a> UI
+    library for
+    styling.
+</div>
