Enhance starter project
- Use SCSS instead of CSS for defining the source styles.
- Introduce esbuild-based build process to generate CSS.
- Copy flowbite libs from node_modules instead of using CDN.
- Simplify initialization of flowbite in index.html.

--- a/Layout/MainLayout.razor
+++ b/Layout/MainLayout.razor
@@ -19,7 +19,7 @@
     {
         if (firstRender)
         {
-            await Js.InvokeVoidAsync("window.initializeFlowbite");
+            await Js.InvokeVoidAsync("window.initFlowbite");
         }
     }
 }
